--- a/example/index.html
+++ b/example/index.html
@@ -2,15 +2,22 @@
 <html>
 <head>
   <title>Mapbox Bright V9</title>
+  <link rel="stylesheet" href="http://openlayers.org/en/v3.18.0/css/ol.css">
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
     #map {
       width: 100%;
-      height: 400px;
+      height: 100%;
       background-color: #f8f4f0;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
+  <script src="http://openlayers.org/en/v3.18.0/build/ol.js"></script>
+  <script src="../dist/olms.js"></script>
   <script src="index.js"></script>
 </body>
