--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Mapbox Bright V9</title>
-  <link rel="stylesheet" href="http://openlayers.org/en/v3.18.0/css/ol.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.18.0/ol.css">
   <style>
     html, body {
       height: 100%;
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div id="map"></div>
-  <script src="http://openlayers.org/en/v3.18.0/build/ol.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.18.0/ol.js"></script>
   <script src="../dist/olms.js"></script>
   <script src="index.js"></script>
 </body>
