--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Mapbox Bright V9</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.18.2/ol.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.18.1/ol.css">
   <style>
     html, body {
       height: 100%;
@@ -17,8 +18,8 @@
 </head>
 <body>
   <div id="map"></div>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.18.2/ol.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch,Promise"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.18.1/ol-debug.js"></script>
   <script src="../dist/olms.js"></script>
   <script src="index.js"></script>
 </body>
