--- a/example/index.html
+++ b/example/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Mapbox Bright V9</title>
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.css">
   <style>
     html, body {
