Update dependencies, fix typo

--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Mapbox Bright V9</title>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.0.1/ol.css">
   <style>
     html, body {
       height: 100%;
@@ -17,8 +17,8 @@
 </head>
 <body>
   <div id="map"></div>
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch,Promise"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.0.1/ol.js"></script>
   <script src="../dist/olms.js"></script>
   <script src="index.js"></script>
 </body>
