--- a/example/tilejson-vectortile.html
+++ b/example/tilejson-vectortile.html
@@ -3,7 +3,7 @@
 <head>
   <title>TileJSON vector tiles</title>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-  <link rel="stylesheet" href="https://openlayers.org/en/v4.1.1/css/ol.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.2.0/ol.css">
   <style>
     html, body {
       height: 100%;
@@ -18,7 +18,7 @@
 <body>
   <div id="map"></div>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise"></script>
-  <script src="https://openlayers.org/en/v4.1.1/build/ol.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.2.0/ol.js"></script>
   <script src="../dist/olms.js"></script>
   <script>
     var map = olms.apply('map', 'https://rawgit.com/PetersonGIS/CamoStyle/b783aadd625bf0d874f77daa6c597b585f0b63fd/camo3d.json');
