--- a/example/geojson-inline.html
+++ b/example/geojson-inline.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Inline GeoJSON</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.2.0/ol.css">
+  <link rel="stylesheet" href="https://unpkg.com/openlayers@4.3.0-beta.3/dist/ol.css">
   <style>
     html, body {
       height: 100%;
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div id="map"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.2.0/ol.js"></script>
+  <script src="https://unpkg.com/openlayers@4.3.0-beta.3/dist/ol.js"></script>
   <script src="../dist/olms.js"></script>
   <script>
   var map = olms.apply('map', 'data/geojson-inline.json');
