--- a/example/mapbox.html
+++ b/example/mapbox.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title>Mapbox</title>
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.2.0/ol.css">
+  <link rel="stylesheet" href="https://unpkg.com/openlayers@4.3.0-beta.3/dist/ol.css">
   <style>
     html, body {
       height: 100%;
@@ -18,7 +17,7 @@
 <body>
   <div id="map"></div>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.2.0/ol.js"></script>
+  <script src="https://unpkg.com/openlayers@4.3.0-beta.3/dist/ol.js"></script>
   <script src="../dist/olms.js"></script>
   <script>
   var baseUrl = 'https://api.mapbox.com/styles/v1/mapbox/bright-v9';
