Make examples mobile and cross-browser ready

--- a/example/geojson.html
+++ b/example/geojson.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
   <title>GeoJSON</title>
   <link rel="stylesheet" href="https://unpkg.com/openlayers@4.3.0-beta.3/dist/ol.css">
   <style>
