--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
   <title>ol-mapbox-style Examples</title>
   <style>
   body {
