--- a/example/wms.html
+++ b/example/wms.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
   <title>OSM with WMS overlay</title>
-  <link rel="stylesheet" href="https://unpkg.com/openlayers@4.3.0-beta.3/dist/ol.css">
+  <link rel="stylesheet" href="https://unpkg.com/openlayers@4.3.1/dist/ol.css">
   <style>
     html, body {
       height: 100%;
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div id="map"></div>
-  <script src="https://unpkg.com/openlayers@4.3.0-beta.3/dist/ol.js"></script>
+  <script src="https://unpkg.com/openlayers@4.3.1/dist/ol.js"></script>
   <script src="../dist/olms.js"></script>
   <script>
   var map = olms.apply('map', 'data/wms.json');
