Update scripts and examples for new dependency versions

--- a/example/mapbox.html
+++ b/example/mapbox.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
   <title>Mapbox</title>
-  <link rel="stylesheet" href="https://unpkg.com/openlayers@4.3.1/dist/ol.css">
+  <link rel="stylesheet" href="https://unpkg.com/openlayers@4.5.0-beta.1/dist/ol.css">
   <style>
     html, body {
       height: 100%;
@@ -20,7 +20,7 @@
 <body>
   <div id="map"></div>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise"></script>
-  <script src="https://unpkg.com/openlayers@4.3.1/dist/ol.js"></script>
+  <script src="https://unpkg.com/openlayers@4.5.0-beta.1/dist/ol.js"></script>
   <script src="../dist/olms.js"></script>
   <script>
   var baseUrl = 'https://api.mapbox.com/styles/v1/mapbox/bright-v9';
