Update example dependencies

--- a/example/geojson.html
+++ b/example/geojson.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
   <title>GeoJSON</title>
-  <link rel="stylesheet" href="https://unpkg.com/openlayers@4.5.0/dist/ol.css">
+  <link rel="stylesheet" href="https://openlayers.org/en/v4.5.0/css/ol.css">
   <style>
     html, body {
       height: 100%;
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div id="map"></div>
-  <script src="https://unpkg.com/openlayers@4.5.0/dist/ol.js"></script>
+  <script src="https://openlayers.org/en/v4.5.0/build/ol.js"></script>
   <script src="../dist/olms.js"></script>
   <script>
   var map = olms.apply('map', 'data/geojson.json');
