--- a/example/tilejson-vectortile.html
+++ b/example/tilejson-vectortile.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
   <title>TileJSON vector tiles</title>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-  <link rel="stylesheet" href="https://unpkg.com/openlayers@4.5.0/dist/ol.css">
+  <link rel="stylesheet" href="https://openlayers.org/en/v4.5.0/css/ol.css">
   <style>
     html, body {
       height: 100%;
@@ -21,7 +21,7 @@
 <body>
   <div id="map"></div>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise"></script>
-  <script src="https://unpkg.com/openlayers@4.5.0/dist/ol.js"></script>
+  <script src="https://openlayers.org/en/v4.5.0/build/ol.js"></script>
   <script src="../dist/olms.js"></script>
   <script>
     var map = olms.apply('map', 'https://rawgit.com/PetersonGIS/CamoStyle/b783aadd625bf0d874f77daa6c597b585f0b63fd/camo3d.json');
