--- a/example/tilejson-vectortile.html
+++ b/example/tilejson-vectortile.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div id="map"></div>
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise,Symbol,Array.prototype.@@iterator"></script>
   <script src="https://openlayers.org/en/v4.6.2/build/ol.js"></script>
   <script src="../dist/olms.js"></script>
   <script>
