--- a/example/_template.html
+++ b/example/_template.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
-  <title>Inline GeoJSON</title>
+  <title>ol-mapbox-style example</title>
   <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css">
-  <script src="https://openlayers.org/en/v4.6.5/build/ol-debug.js"></script>
   <style>
     html, body {
       height: 100%;
@@ -20,8 +19,4 @@
 </head>
 <body>
   <div id="map"></div>
-  <script src="../dist/olms.js"></script>
-  <script>
-  var map = olms.apply('map', 'data/geojson-inline.json');
-  </script>
 </body>
