Add polyfill.io script for IE11 compatibility

--- a/example/_template.html
+++ b/example/_template.html
@@ -18,4 +18,5 @@
 </head>
 <body>
   <div id="map"></div>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default,fetch,String.prototype.startsWith"></script>
 </body>
