--- a/examples/index.html
+++ b/examples/index.html
@@ -19,6 +19,7 @@
     <li><a href="geojson.html">GeoJSON</a> &ndash; Map with a vector layer from GeoJSON</li>
     <li><a href="geojson-featurestate.html">GeoJSON with Hover Effect</a> &ndash; Use <code>feature-state</code> for a hover effect</li>
     <li><a href="geojson-inline.html">Inline GeoJSON</a> &ndash; Map with a vector layer from GeoJSON embedded in the style object</li>
+    <li><a href="geojson-wfs.html">GeoJSON WFS</a> &ndash; Map with a vector layer from WFS</li>
     <li><a href="wms.html">OSM with WMS overlay</a> &ndash; Map with two raster layers (OSM base map and WMS overlay)</li>
     <li><a href="tilejson.html">TileJSON</a> &ndash; Map with a raster layer from a TileJSON definition</li>
     <li><a href="tilejson-vectortile.html">TileJSON vector tiles</a> &ndash; Vector tile map with a source from a TileJSON definition</li>
