--- a/examples/index.html
+++ b/examples/index.html
@@ -24,6 +24,7 @@
     <li><a href="wms.html">OSM with WMS overlay</a> &ndash; Map with two raster layers (OSM base map and WMS overlay)</li>
     <li><a href="tilejson.html">TileJSON</a> &ndash; Map with a raster layer from a TileJSON definition</li>
     <li><a href="tilejson-vectortile.html">TileJSON vector tiles</a> &ndash; Vector tile map with a source from a TileJSON definition</li>
+    <li><a href="esri-4326.html">Esri vector tiles 4326</a> &ndash; MapTiler with custom <code>projection</code></li>
     <li><a href="esri-transformrequest.html">Esri vector tiles with bad tile URLs</a> &ndash; Esri vector tile map using the <code>transformRequest</code> option to fix tile urls.</li>
     <li><a href="openmaptiles-layer.html">OpenMapTiles Layer</a> (requires a <a href="https://cloud.maptiler.com/account/keys">Maptiler Cloud API token</a>) &ndash; Vector tile layer from OpenMapTiles's basic style</li>
     <li><a href="geojson-layer.html">GeoJSON Layer</a> &ndash; Vector layer from GeoJSON</li>
