Add terrarium example

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,6 +16,7 @@
   <ul>
     <li><a href="mapbox.html">Mapbox</a> (requires a <a href="https://www.mapbox.com/studio/account/tokens/">Mapbox API token</a>) &ndash; Vector tile map from Mapbox's Bright style</li>
     <li><a href="maptiler-hillshading.html">Maptiler w/ hillshading</a> (requires a <a href="https://cloud.maptiler.com/account/keys/">Maptiler API token</a>) &ndash; Hillshading map with Maptiler style sources</li>
+    <li><a href="terrarium-hillshading.html">Terrarium hillshading</a> &ndash; Hillshading map using a Terrarium source</li>
     <li><a href="openmaptiles.html">OpenMapTiles</a> (requires a <a href="https://cloud.maptiler.com/account/keys">Maptiler Cloud API token</a>) &ndash; Vector tile map from OpenMapTiles's basic style</li>
     <li><a href="geojson.html">GeoJSON</a> &ndash; Map with a vector layer from GeoJSON</li>
     <li><a href="geojson-featurestate.html">GeoJSON with Hover Effect</a> &ndash; Use <code>feature-state</code> for a hover effect</li>
