--- a/examples/index.html
+++ b/examples/index.html
@@ -31,6 +31,7 @@
     <li><a href="geojson-layer.html">GeoJSON Layer</a> &ndash; Vector layer from GeoJSON</li>
     <li><a href="stylefunction.html">Style function</a> &ndash; Low-level API for creating a style function from a Mapbox Style source</li>
     <li><a href="apply-layergroup.html">Apply to a Layer Group</a> &ndash; Apply style to a layer group instead of an entire map</li>
+    <li><a href="sdf-sprites.html">SDF Sprites</a> &ndash; Handle SDF sprites instead of regular image</li>
   </ul>
 </body>
 </html>
