--- a/examples/geojson-inline.html
+++ b/examples/geojson-inline.html
@@ -5,4 +5,4 @@
     #map {
       width: 100%;
       height: 100%;
-    }</style><script defer="defer" src="common.js"></script><script defer="defer" src="geojson-inline.js"></script><link href="geojson-inline.css" rel="stylesheet"></head><body><div id="map"></div><script src="https://polyfill.io/v3/polyfill.min.js?features=default,fetch,String.prototype.startsWith"></script></body></html>
+    }</style><script defer="defer" src="common.js"></script><script defer="defer" src="geojson-inline.js"></script><link href="geojson-inline.css" rel="stylesheet"></head><body><div id="map"></div></body></html>
