Add PMTiles example with pmtiles:// protocol

--- a/examples/index.html
+++ b/examples/index.html
@@ -32,6 +32,7 @@
     <li><a href="stylefunction.html">Style function</a> &ndash; Low-level API for creating a style function from a Mapbox Style source</li>
     <li><a href="apply-layergroup.html">Apply to a Layer Group</a> &ndash; Apply style to a layer group instead of an entire map</li>
     <li><a href="sdf-sprites.html">SDF Sprites</a> &ndash; Handle SDF sprites instead of regular image</li>
+    <li><a href="pmtiles.html">PMTiles</a> &ndash; Decode PMTiles on the client, using <code>transformRequest</code></li>
   </ul>
 </body>
 </html>
