Improve examples, add references to MapLibre

--- a/examples/index.html
+++ b/examples/index.html
@@ -13,9 +13,10 @@
 </head>
 <body>
   <h1>ol-mapbox-style Examples</h1>
+  <p>To see the source code for the examples below, go to <a href="https://github.com/openlayers/ol-mapbox-style/tree/main/examples/">https://github.com/openlayers/ol-mapbox-style/tree/main/examples/</a>.</p>
   <ul>
     <li><a href="mapbox.html">Mapbox</a> (requires a <a href="https://www.mapbox.com/studio/account/tokens/">Mapbox API token</a>) &ndash; Vector tile map from Mapbox's Bright style</li>
-    <li><a href="maptiler-hillshading.html">Maptiler w/ hillshading</a> (requires a <a href="https://cloud.maptiler.com/account/keys/">Maptiler API token</a>) &ndash; Hillshading map with Maptiler style sources</li>
+    <li><a href="maptiler-hillshading.html">Maptiler w/ hillshading</a> (requires a <a href="https://cloud.maptiler.com/account/keys/">Maptiler Cloud API token</a>) &ndash; Hillshading map with Maptiler style sources</li>
     <li><a href="terrarium-hillshading.html">Terrarium hillshading</a> &ndash; Hillshading map using a Terrarium source</li>
     <li><a href="openmaptiles.html">OpenMapTiles</a> (requires a <a href="https://cloud.maptiler.com/account/keys">Maptiler Cloud API token</a>) &ndash; Vector tile map from OpenMapTiles's basic style</li>
     <li><a href="geojson.html">GeoJSON</a> &ndash; Map with a vector layer from GeoJSON</li>
@@ -31,8 +32,8 @@
     <li><a href="geojson-layer.html">GeoJSON Layer</a> &ndash; Vector layer from GeoJSON</li>
     <li><a href="stylefunction.html">Style function</a> &ndash; Low-level API for creating a style function from a Mapbox Style source</li>
     <li><a href="apply-layergroup.html">Apply to a Layer Group</a> &ndash; Apply style to a layer group instead of an entire map</li>
-    <li><a href="sdf-sprites.html">SDF Sprites</a> &ndash; Handle SDF sprites instead of regular image</li>
-    <li><a href="pmtiles.html">PMTiles</a> &ndash; Decode PMTiles on the client, using <code>transformRequest</code></li>
+    <li><a href="sdf-sprites.html">SDF Sprites</a> (requires a <a href="https://cloud.maptiler.com/account/keys/">Maptiler Cloud API token</a>) &ndash; Handle SDF sprites instead of regular image</li>
+    <li><a href="pmtiles.html">PMTiles</a> &ndash; Decode PMTiles on the client, using the <a href="https://npmjs.com/package/pmtiles-protocol">pmtiles-protocol</a> package</li>
   </ul>
 </body>
 </html>
