Support light and dark theme for examples index

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+  <meta name="color-scheme" content="light dark">
   <title>ol-mapbox-style Examples</title>
   <style>
   body {
