update examples index

--- a/examples/index.html
+++ b/examples/index.html
@@ -35,6 +35,7 @@
     <li><a href="apply-layergroup.html">Apply to a Layer Group</a> &ndash; Apply style to a layer group instead of an entire map</li>
     <li><a href="sdf-sprites.html">SDF Sprites</a> (requires a <a href="https://cloud.maptiler.com/account/keys/">Maptiler Cloud API token</a>) &ndash; Handle SDF sprites instead of regular image</li>
     <li><a href="pmtiles.html">PMTiles</a> &ndash; Decode PMTiles on the client, using the <a href="https://npmjs.com/package/pmtiles-protocol">pmtiles-protocol</a> package</li>
+    <li><a href="versatiles.html">Versatiles</a> &ndash; Map with open source <a href="https://versatiles.org/">vector map tiles</a> based on OpenStreetMap data</li>
   </ul>
 </body>
 </html>
