--- a/examples/index.html
+++ b/examples/index.html
@@ -16,7 +16,7 @@
   <h1>ol-mapbox-style Examples</h1>
   <p>To see the source code for the examples below, go to <a href="https://github.com/openlayers/ol-mapbox-style/tree/main/examples/">https://github.com/openlayers/ol-mapbox-style/tree/main/examples/</a>.</p>
   <ul>
-    <li><a href="mapbox.html">Mapbox</a> (requires a <a href="https://www.mapbox.com/studio/account/tokens/">Mapbox API token</a>) &ndash; Vector tile map from Mapbox's Bright style</li>
+    <li><a href="mapbox.html">Mapbox</a> (requires a <a href="https://www.mapbox.com/studio/account/tokens/">Mapbox API token</a>) &ndash; Vector tile map from Mapbox's Streets v12 style</li>
     <li><a href="maptiler-hillshading.html">Maptiler w/ hillshading</a> (requires a <a href="https://cloud.maptiler.com/account/keys/">Maptiler Cloud API token</a>) &ndash; Hillshading map with Maptiler style sources</li>
     <li><a href="terrarium-hillshading.html">Terrarium hillshading</a> &ndash; Hillshading map using a Terrarium source</li>
     <li><a href="openmaptiles.html">OpenMapTiles</a> (requires a <a href="https://cloud.maptiler.com/account/keys">Maptiler Cloud API token</a>) &ndash; Vector tile map from OpenMapTiles's basic style</li>
