Add restyle example

--- a/examples/index.html
+++ b/examples/index.html
@@ -25,6 +25,7 @@
     <li><a href="geojson-inline.html">Inline GeoJSON</a> &ndash; Map with a vector layer from GeoJSON embedded in the style object</li>
     <li><a href="geojson-wfs.html">GeoJSON WFS</a> &ndash; Map with a vector layer from WFS</li>
     <li><a href="wms.html">OSM with WMS overlay</a> &ndash; Map with two raster layers (OSM base map and WMS overlay)</li>
+    <li><a href="osm-restyle.html">OSM with raster operations</a> &ndash; Map with raster restyle operations (hue rotate, contrast, saturation, etc.) </li>
     <li><a href="tilejson.html">TileJSON</a> &ndash; Map with a raster layer from a TileJSON definition</li>
     <li><a href="tilejson-vectortile.html">TileJSON vector tiles</a> &ndash; Vector tile map with a source from a TileJSON definition</li>
     <li><a href="esri-4326.html">Esri vector tiles 4326</a> &ndash; MapTiler with custom <code>projection</code></li>
